Fixed button align in history block

--- a/#src/scss/_history.scss
+++ b/#src/scss/_history.scss
@@ -121,4 +121,8 @@
     font-size: 16px;
     font-weight: 700;
     line-height: 24px;
+
+    @media (min-width: 768px) {
+        align-self: flex-start;
+    }
 }
